[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI_Components/PlanLine.gd" type="Script" id=1]
[ext_resource path="res://Assets/png/chevron-up.png" type="Texture" id=2]
[ext_resource path="res://Assets/png/chevron-down.png" type="Texture" id=3]
[ext_resource path="res://Assets/png/planline_menu.png" type="Texture" id=4]

[node name="PlanLine" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="buttons" type="HBoxContainer" parent="."]
margin_right = 107.0
margin_bottom = 55.0
custom_constants/separation = 7

[node name="move_up" type="ToolButton" parent="buttons"]
margin_right = 36.0
margin_bottom = 55.0
mouse_filter = 1
icon = ExtResource( 2 )

[node name="move_down" type="ToolButton" parent="buttons"]
margin_left = 43.0
margin_right = 79.0
margin_bottom = 55.0
mouse_filter = 1
icon = ExtResource( 3 )

[node name="menu" type="MenuButton" parent="buttons"]
margin_left = 86.0
margin_right = 107.0
margin_bottom = 55.0
mouse_filter = 1
icon = ExtResource( 4 )
items = [ "Add Section", null, 0, false, false, 0, 0, null, "", false, "Duplicate", null, 0, false, false, 1, 0, null, "", false, "Add Line", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, true, -1, 0, null, "", true, "Delete Section", null, 0, false, false, 3, 0, null, "", false, "Delete Line", null, 0, false, false, 4, 0, null, "", false ]

[node name="sections" type="HSplitContainer" parent="."]
margin_left = 111.0
margin_right = 1440.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="split1" type="HSplitContainer" parent="sections"]
margin_right = 658.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="split1-1" type="HSplitContainer" parent="sections/split1"]
margin_right = 323.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="line1" type="LineEdit" parent="sections/split1/split1-1"]
margin_right = 58.0
margin_bottom = 55.0
focus_next = NodePath("../line2")
focus_previous = NodePath("../../../split2/split1-2/line2")
mouse_filter = 1
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.55

[node name="line2" type="LineEdit" parent="sections/split1/split1-1"]
margin_left = 70.0
margin_right = 323.0
margin_bottom = 55.0
focus_next = NodePath("../../split1-2/line1")
focus_previous = NodePath("../line1")
mouse_filter = 1
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.55

[node name="split1-2" type="HSplitContainer" parent="sections/split1"]
margin_left = 335.0
margin_right = 658.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="line1" type="LineEdit" parent="sections/split1/split1-2"]
margin_right = 58.0
margin_bottom = 55.0
focus_next = NodePath("../line2")
focus_previous = NodePath("../../split1-1/line2")
mouse_filter = 1
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.55

[node name="line2" type="LineEdit" parent="sections/split1/split1-2"]
margin_left = 70.0
margin_right = 323.0
margin_bottom = 55.0
focus_next = NodePath("../../../split2/split1-1/line1")
focus_previous = NodePath("../line1")
mouse_filter = 1
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.55

[node name="split2" type="HSplitContainer" parent="sections"]
margin_left = 670.0
margin_right = 1329.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="split2-1" type="HSplitContainer" parent="sections/split2"]
margin_right = 323.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="line1" type="LineEdit" parent="sections/split2/split2-1"]
margin_right = 58.0
margin_bottom = 55.0
focus_next = NodePath("../line2")
focus_previous = NodePath("../../../split1/split1-2/line2")
mouse_filter = 1
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.55

[node name="line2" type="LineEdit" parent="sections/split2/split2-1"]
margin_left = 70.0
margin_right = 323.0
margin_bottom = 55.0
focus_next = NodePath("../../split1-2/line1")
focus_previous = NodePath("../line1")
mouse_filter = 1
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.55

[node name="split2-2" type="HSplitContainer" parent="sections/split2"]
margin_left = 335.0
margin_right = 659.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="line1" type="LineEdit" parent="sections/split2/split2-2"]
margin_right = 58.0
margin_bottom = 55.0
focus_next = NodePath("../line2")
focus_previous = NodePath("../../split1-1/line2")
mouse_filter = 1
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.55

[node name="line2" type="LineEdit" parent="sections/split2/split2-2"]
margin_left = 70.0
margin_right = 324.0
margin_bottom = 55.0
focus_next = NodePath("../../../split1/split1-1/line1")
focus_previous = NodePath("../line1")
mouse_filter = 1
expand_to_text_length = true
caret_blink = true
caret_blink_speed = 0.55
[connection signal="mouse_entered" from="." to="." method="_on_PlanLine_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlanLine_mouse_exited"]
[connection signal="pressed" from="buttons/move_up" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="buttons/move_down" to="." method="_on_move_down_pressed"]
[connection signal="about_to_show" from="buttons/menu" to="." method="_on_menu_about_to_show"]
